--- a/Dockerfile.matomo
+++ b/Dockerfile.matomo
@@ -9,19 +9,17 @@ RUN apt-get update && \
     apt-get clean && \
     rm -rf /var/lib/apt/lists/*
 
-# Enable Apache mod_rewrite
-RUN a2enmod rewrite
+# Enable Apache mod_rewrite and mod_ssl for HTTPS
+RUN a2enmod rewrite ssl
 
 # Set a default ServerName to suppress the FQDN warning
 RUN echo "ServerName localhost" >> /etc/apache2/apache2.conf
 
-# Download and install the latest version of Matomo
-# DELETE FOR DEV ENV. USEFUL FOR PROD AFTER YOU BUILD YOUR IMAGE BASED ON LATEST MATOMO
-# RUN cd /var/www/html && \
-#     wget https://builds.matomo.org/matomo-latest.zip && \
-#     unzip matomo-latest.zip && \
-#     rm matomo-latest.zip && \
-#     chown -R www-data:www-data /var/www/html
+# Copy the custom SSL Apache configuration into the container
+COPY apache/matomo-ssl.conf /etc/apache2/sites-available/
 
-# Expose port 80
-EXPOSE 80
+# Enable the SSL site configuration
+RUN a2ensite matomo-ssl
+
+# Expose HTTPS port (in addition to the already exposed HTTP port)
+EXPOSE 80 443
